k8s/network-policy-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
spec:
  podSelector:
    matchLabels:
      component: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              component: server
        - podSelector:
            matchLabels:
              component: worker
      ports:
        - protocol: TCP
          port: 6379
